--- a/packages/app/src/modules/declaration-remuneration/steps/Step4QuartileDistribution.module.scss
+++ b/packages/app/src/modules/declaration-remuneration/steps/Step4QuartileDistribution.module.scss
@@ -26,6 +26,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
+	margin-top: 2rem;
 }
 
 .quartileTable {
